<resources>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="app_aux">AUX</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_dtv">DTV</string>
    <string name="app_dvr">DVR</string>
    <string name="app_name">KswCarProject</string>
    <string name="app_not_update">Upgrade not allowed!</string>
    <string name="app_ok">OK</string>
    <string name="audi_apps">@string/ksw_id7_apps</string>
    <string name="audi_browser">@string/id6_browser</string>
    <string name="audi_bt">@string/ug_bluetooth</string>
    <string name="audi_car">@string/ksw_id7_car</string>
    <string name="audi_dashboard">@string/ksw_id7_dashboard_lable</string>
    <string name="audi_easyconnection">@string/id6_shouj_hulian</string>
    <string name="audi_factory_home_right_option1">Hide</string>
    <string name="audi_factory_home_right_option2">Display Audi Logo Or AMAP Navigation Information</string>
    <string name="audi_factory_home_right_option3">Display Audi Logo</string>
    <string name="audi_factory_home_right_option4">Display Car Information</string>
    <string name="audi_factory_home_right_option5">Display Music Information</string>
    <string name="audi_home_left_widget">Widget in the left side of the homepage</string>
    <string name="audi_home_right_widget">Widget in the right side of the homepage</string>
    <string name="audi_music">@string/ksw_id7_music</string>
    <string name="audi_navi">@string/ksw_id7_navi</string>
    <string name="audi_set_12hour">@string/text_6</string>
    <string name="audi_set_24hour">@string/text_7</string>
    <string name="audi_set_360_camera">@string/shext_3</string>
    <string name="audi_set_android_time">@string/text_5</string>
    <string name="audi_set_back_brightness">@string/set_text6</string>
    <string name="audi_set_back_camera">@string/shext_1</string>
    <string name="audi_set_back_camera_type">后视摄像头类型</string>
    <string name="audi_set_car_camera">@string/shext_2</string>
    <string name="audi_set_car_time">@string/text_4</string>
    <string name="audi_set_eq_bass">@string/eq_text7</string>
    <string name="audi_set_eq_classical">@string/eq_text6</string>
    <string name="audi_set_eq_dance">@string/eq_text3</string>
    <string name="audi_set_eq_jazz">@string/eq_text5</string>
    <string name="audi_set_eq_mezzo">@string/eq_text8</string>
    <string name="audi_set_eq_popular">@string/eq_text2</string>
    <string name="audi_set_eq_rock">@string/eq_text4</string>
    <string name="audi_set_eq_treble">@string/eq_text9</string>
    <string name="audi_set_eq_user">@string/eq_text1</string>
    <string name="audi_set_item_eq_text">@string/item4</string>
    <string name="audi_set_item_factory_text">@string/item9</string>
    <string name="audi_set_item_language_text">@string/item5</string>
    <string name="audi_set_item_more_text">@string/item8</string>
    <string name="audi_set_item_navi_text">@string/item2</string>
    <string name="audi_set_item_sound_text">@string/item3</string>
    <string name="audi_set_item_sysinfo_text">@string/item7</string>
    <string name="audi_set_item_system_text">@string/item1</string>
    <string name="audi_set_item_time_text">@string/item6</string>
    <string name="audi_set_sound_call_volume">@string/voic_3</string>
    <string name="audi_set_sound_hz_ms">@string/voic_1</string>
    <string name="audi_set_sound_media_volume">@string/voic_2</string>
    <string name="audi_set_sound_navi_volume">@string/voic_5</string>
    <string name="audi_set_sound_yc_ms">@string/voic_4</string>
    <string name="audi_set_speed_unit">@string/function_text24</string>
    <string name="audi_set_sync_time">@string/text_2</string>
    <string name="audi_set_sys_info_app_ver">@string/text_9</string>
    <string name="audi_set_sys_info_mcu_ver">@string/text_8</string>
    <string name="audi_set_sys_info_muc_updata">@string/text_11</string>
    <string name="audi_set_sys_info_nanndflash">@string/text_15</string>
    <string name="audi_set_sys_info_ram">@string/text_14</string>
    <string name="audi_set_sys_info_restore_factory">@string/text_12</string>
    <string name="audi_set_sys_info_system_ver">@string/text_10</string>
    <string name="audi_set_temp_unit">Unit Of Temperature</string>
    <string name="audi_set_time_zhishi">@string/text_3</string>
    <string name="audi_setting">@string/ksw_id7_setting</string>
    <string name="audi_system_brightness_auto">@string/function_text21</string>
    <string name="audi_system_brightness_day">@string/set_text6</string>
    <string name="audi_system_brightness_night">夜间亮度</string>
    <string name="audi_system_car_aux1">@string/set_caraux1</string>
    <string name="audi_system_car_aux2">@string/set_caraux2</string>
    <string name="audi_video">@string/video</string>
    <string name="bc_apps_btn_text">Android Apps</string>
    <string name="benz_gs_home_apps">@string/gs_application</string>
    <string name="benz_gs_home_apps_hint">@string/gs_application_mess</string>
    <string name="benz_gs_home_bt">@string/id6_phone</string>
    <string name="benz_gs_home_bt_hint">@string/gs_phone_unconnected_bt_mess</string>
    <string name="benz_gs_home_car">@string/ksw_id7_car_info</string>
    <string name="benz_gs_home_car_hint">@string/ksw_id7_switch_to_carinfo_window</string>
    <string name="benz_gs_home_dash">@string/ksw_id7_dashboard_lable</string>
    <string name="benz_gs_home_filema">@string/id6_filemanager</string>
    <string name="benz_gs_home_filema_hint">@string/gs_filemanager_mess</string>
    <string name="benz_gs_home_music">@string/ksw_id7_music</string>
    <string name="benz_gs_home_music_hint">@string/unkonw</string>
    <string name="benz_gs_home_navi">Navigation</string>
    <string name="benz_gs_home_navi_hint">@string/gs_real_time_navi</string>
    <string name="benz_gs_home_plink">@string/id6_shouj_hulian</string>
    <string name="benz_gs_home_plink_hint">@string/id6_shouj_hulian_mess</string>
    <string name="benz_gs_home_set">@string/ksw_id7_setting</string>
    <string name="benz_gs_home_set_hint">@string/id6_setting_mess</string>
    <string name="benz_gs_home_vide">@string/ksw_id7_hd_video</string>
    <string name="benz_gs_home_vide_hint">@string/ksw_id7_hd_video_warning</string>
    <string name="bmw_evo_id6_gs_home_apps">@string/ug_apps_text</string>
    <string name="bmw_evo_id6_gs_home_apps_hint">@string/id6_apps_mess</string>
    <string name="bmw_evo_id6_gs_home_browser">@string/id6_browser</string>
    <string name="bmw_evo_id6_gs_home_browser_hint">@string/id6_browser_mess</string>
    <string name="bmw_evo_id6_gs_home_bt">@string/id6_phone</string>
    <string name="bmw_evo_id6_gs_home_bt_hint">@string/id6_phone_mess</string>
    <string name="bmw_evo_id6_gs_home_car">@string/ksw_id7_car_info</string>
    <string name="bmw_evo_id6_gs_home_car_hint">@string/ksw_id7_switch_to_carinfo_window</string>
    <string name="bmw_evo_id6_gs_home_dash">@string/ksw_id7_ecu</string>
    <string name="bmw_evo_id6_gs_home_dvr">@string/function_text8</string>
    <string name="bmw_evo_id6_gs_home_dvr_hint">@string/id6_xingchejily_mess</string>
    <string name="bmw_evo_id6_gs_home_filema">@string/id6_filemanager</string>
    <string name="bmw_evo_id6_gs_home_filema_hint">@string/id6_filemanager_mess</string>
    <string name="bmw_evo_id6_gs_home_home_navi">@string/ksw_id7_navi</string>
    <string name="bmw_evo_id6_gs_home_home_navi_hint">@string/ksw_id7_real_time_navi</string>
    <string name="bmw_evo_id6_gs_home_music">@string/ksw_id7_music</string>
    <string name="bmw_evo_id6_gs_home_plink">@string/id6_shouj_hulian</string>
    <string name="bmw_evo_id6_gs_home_plink_hint">@string/id6_shouj_hulian_mess</string>
    <string name="bmw_evo_id6_gs_home_set">@string/ksw_id7_setting</string>
    <string name="bmw_evo_id6_gs_home_set_hint">@string/id6_setting_mess</string>
    <string name="bmw_evo_id6_gs_home_vide">@string/ksw_id7_hd_video</string>
    <string name="bmw_evo_id6_gs_home_video">@string/ksw_id7_hd_video</string>
    <string name="bmw_evo_id6_gs_home_video_hint">@string/ksw_id7_hd_video_warning</string>
    <string name="boot_record_mode">Remember The Last Mode</string>
    <string name="boot_record_mode_radio1">Enable</string>
    <string name="boot_record_mode_radio2">To OEM System</string>
    <string name="boot_record_mode_radio3">To Android Homepage</string>
    <string name="can_bus">Collect CAN Bus Data</string>
    <string name="dialog_update1">File directory not found</string>
    <string name="dialog_update10">Whether to choose this model</string>
    <string name="dialog_update11">Whether to choose this screen type</string>
    <string name="dialog_update2">No upgrade file found</string>
    <string name="dialog_update3">Upgrade successful!</string>
    <string name="dialog_update4">Upgrade failed!</string>
    <string name="dialog_update5">Do you want to import the configuration file?</string>
    <string name="dialog_update6">Do you want to upgrade the MCU?</string>
    <string name="dialog_update7">There was an error in the upgrade file. Please try again later</string>
    <string name="dialog_update8">Please do NOT power off or restart during the upgrade process.</string>
    <string name="dialog_update9">Saving UI settings, please restart the monitor after 10 seconds!</string>
    <string name="dialog_updatein">File importing...</string>
    <string name="eq_text1">User</string>
    <string name="eq_text2">POP</string>
    <string name="eq_text3">Dance</string>
    <string name="eq_text4">Rock</string>
    <string name="eq_text5">Jazz</string>
    <string name="eq_text6">Classical</string>
    <string name="eq_text7">Bass</string>
    <string name="eq_text8">Alto</string>
    <string name="eq_text9">Treble</string>
    <string name="eq_user">User</string>
    <string name="fac_1">Password:</string>
    <string name="factory_benc">Benz AUX Activate</string>
    <string name="factory_bencPank">Benz Control Panel</string>
    <string name="factory_carseep">Speedometer Selection</string>
    <string name="id6_browser">Browser</string>
    <string name="id6_filemanager">File Manager</string>
    <string name="id6_shouj_hulian">EasyConnection</string>
    <string name="ksw_id7_hd_video">HD Video</string>
    <string name="ksw_id7_music">Music</string>
    <string name="set_caraux">AUX Position</string>
    <string name="set_text1">Mirror Reverse Camera</string>
    <string name="set_text2">Disable Video In Motion</string>
    <string name="set_text3">Parking Lines</string>
    <string name="set_text4">Park Distance Control</string>
    <string name="set_text5">Camera Selection</string>
    <string name="set_text7">Mute while on reverse</string>
    <string name="text_13">Brightness</string>
    <string name="text_logo_input">Import</string>
    <string name="text_logo_one">Page 1</string>
    <string name="text_logo_two">Page 2</string>
    <string name="ug_apps_text">More Apps</string>
    <string name="ug_bluetooth">Bluetooth</string>
    <string name="ug_navigation">Navigation</string>
</resources>