<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:scrollbars="none" android:descendantFocusability="afterDescendants" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:descendantFocusability="afterDescendants" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="30dp">
        <CheckBox android:textSize="25sp" android:textColor="#ffffff" android:gravity="center_vertical" android:id="@+id/cbox_sysHjs" android:background="@drawable/id6_list_bg" android:focusable="true" android:nextFocusUp="@+id/cbox_sysHjs" android:layout_width="580dp" android:layout_height="63dp" android:checked="false" android:button="@null" android:text="@string/set_text1" android:drawableLeft="@drawable/id6_checkbox_selector" android:paddingStart="30dp"/>
        <CheckBox android:textSize="25sp" android:textColor="#ffffff" android:gravity="center_vertical" android:id="@+id/cbox_sysXcjz" android:background="@drawable/id6_list_bg" android:focusable="true" android:visibility="gone" android:layout_width="580dp" android:layout_height="63dp" android:checked="false" android:button="@null" android:text="@string/set_text2" android:drawableLeft="@drawable/id6_checkbox_selector" android:paddingStart="30dp"/>
        <CheckBox android:textSize="25sp" android:textColor="#ffffff" android:gravity="center_vertical" android:id="@+id/cbox_sysDcgj" android:background="@drawable/id6_list_bg" android:focusable="true" android:layout_width="580dp" android:layout_height="63dp" android:checked="true" android:button="@null" android:text="@string/set_text3" android:drawableLeft="@drawable/id6_checkbox_selector" android:paddingStart="30dp"/>
        <CheckBox android:textSize="25sp" android:textColor="#ffffff" android:gravity="center_vertical" android:id="@+id/cbox_sysDcld" android:background="@drawable/id6_list_bg" android:focusable="true" android:layout_width="580dp" android:layout_height="63dp" android:checked="true" android:button="@null" android:text="@string/set_text4" android:drawableLeft="@drawable/id6_checkbox_selector" android:paddingStart="30dp"/>
        <TextView android:textSize="25sp" android:textColor="#ffffff" android:gravity="center_vertical" android:id="@+id/tv_sysDcsxt" android:background="@drawable/id6_list_bg" android:paddingLeft="30dp" android:focusable="true" android:layout_width="580dp" android:layout_height="63dp" android:text="@string/set_text5"/>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/id6_list_bg" android:paddingLeft="30dp" android:focusable="false" android:layout_width="580dp" android:layout_height="63dp">
            <TextView android:textSize="25sp" android:textColor="#ffffff" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="63dp" android:text="@string/text_13"/>
            <ImageView android:background="@mipmap/id6_icon_brightness" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp"/>
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:background="@mipmap/id6_progress_bar_bg" android:layout_width="240dp" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="15dp"/>
                <SeekBar android:id="@+id/seekbar_brightness" android:background="@null" android:focusable="false" android:layout_width="270dp" android:layout_height="40dp" android:maxHeight="20dp" android:progressDrawable="@drawable/layer_id6_bgpro" android:minHeight="20dp" android:thumb="@null"/>
            </RelativeLayout>
            <TextView android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/tv_beigSize" android:padding="5dp" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0"/>
        </LinearLayout>
        <TextView android:textSize="25sp" android:textColor="@color/color1" android:gravity="center_vertical" android:id="@+id/tv_sysCaux" android:background="@drawable/id6_list_bg" android:paddingLeft="30dp" android:focusable="true" android:visibility="gone" android:layout_width="580dp" android:layout_height="63dp" android:text="@string/set_caraux"/>
        <CheckBox android:textSize="25sp" android:textColor="#ffffff" android:gravity="center_vertical" android:id="@+id/cbox_sysDcjy" android:background="@drawable/id6_list_bg" android:focusable="true" android:nextFocusDown="@+id/cbox_sysDcjy" android:layout_width="580dp" android:layout_height="63dp" android:checked="false" android:button="@null" android:text="@string/set_text7" android:drawableLeft="@drawable/id6_checkbox_selector" android:paddingStart="30dp"/>
        <TextView android:textSize="25sp" android:textColor="#ffffff" android:gravity="center_vertical" android:id="@+id/id6_sysTempUnit" android:background="@drawable/id6_list_bg" android:paddingLeft="30dp" android:focusable="true" android:layout_width="580dp" android:layout_height="63dp" android:text="@string/audi_set_temp_unit"/>
    </LinearLayout>
</ScrollView>
