<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="80dp" android:layout_marginLeft="40dp" android:layout_alignParentBottom="true">
        <TextView android:textSize="20sp" android:textColor="@android:color/holo_red_light" android:gravity="center" android:id="@+id/tvOne" android:background="#313131" android:paddingLeft="60dp" android:paddingTop="10dp" android:paddingRight="60dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60dp" android:text="@string/text_logo_one"/>
        <TextView android:textSize="20sp" android:textColor="#ffffff" android:gravity="center" android:id="@+id/tvTwo" android:background="#313131" android:paddingLeft="60dp" android:paddingTop="10dp" android:paddingRight="60dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60dp" android:text="@string/text_logo_two"/>
        <TextView android:textSize="20sp" android:textColor="@drawable/text_selector" android:gravity="center" android:id="@+id/tv_Input" android:background="#313131" android:paddingLeft="60dp" android:paddingTop="10dp" android:paddingRight="60dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60dp" android:text="@string/text_logo_input"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView android:id="@+id/recyclerView" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="85dp"/>
    <android.support.v7.widget.RecyclerView android:id="@+id/siRen_recyclerView" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="85dp"/>
</RelativeLayout>
