<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/carConstraintLayout" android:tag="layout/ug_home_four_0" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.wits.ksw.launcher.view.ug.UgHomeImageView android:id="@+id/ug_home_browser_vaiw" android:tag="binding_1" android:nextFocusUp="@+id/ug_home_setting_vaiw" android:nextFocusDown="@+id/ug_home_dvr_vaiw" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ug_home_broswer_selector" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView android:textSize="24sp" android:textColor="@android:color/white" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="312dp" android:text="@string/id6_browser" android:singleLine="true" android:layout_marginStart="44dp" android:layout_marginEnd="44dp" app:layout_constraintEnd_toEndOf="@+id/ug_home_browser_vaiw" app:layout_constraintStart_toStartOf="@+id/ug_home_browser_vaiw" app:layout_constraintTop_toTopOf="parent"/>
    <com.wits.ksw.launcher.view.ug.UgHomeImageView android:id="@+id/ug_home_dvr_vaiw" android:tag="binding_2" android:nextFocusUp="@+id/ug_home_browser_vaiw" android:nextFocusDown="@+id/ug_home_file_vaiw" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ug_home_dvr_selector" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/ug_home_browser_vaiw" app:layout_constraintTop_toTopOf="parent"/>
    <TextView android:textSize="24sp" android:textColor="@android:color/white" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="312dp" android:text="@string/app_dvr" android:singleLine="true" android:layout_marginStart="44dp" app:layout_constraintEnd_toEndOf="@+id/ug_home_dvr_vaiw" app:layout_constraintStart_toStartOf="@+id/ug_home_dvr_vaiw" app:layout_constraintTop_toTopOf="parent"/>
    <com.wits.ksw.launcher.view.ug.UgHomeImageView android:id="@+id/ug_home_file_vaiw" android:tag="binding_3" android:nextFocusUp="@+id/ug_home_dvr_vaiw" android:nextFocusDown="@+id/ug_home_file_vaiw" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ug_home_file_selector" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/ug_home_dvr_vaiw" app:layout_constraintTop_toTopOf="parent"/>
    <TextView android:textSize="24sp" android:textColor="@android:color/white" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="312dp" android:text="@string/id6_filemanager" android:singleLine="true" android:layout_marginStart="44dp" android:layout_marginEnd="44dp" app:layout_constraintEnd_toEndOf="@+id/ug_home_file_vaiw" app:layout_constraintStart_toStartOf="@+id/ug_home_file_vaiw" app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>
